[package]
name = "surge"
version = "0.1.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "cli/daemon for music"
repository = "https://github.com/sevagh/surge"
readme = "./README.md"
license = "Apache-2.0"
keywords = ["music", "cli"]

[dependencies]
hyper = "0.10.11"
hyper-native-tls = "0.2.3"
clap = "2.24.2"
toml = "0.4.1"
serde_derive = "1.0.8"
serde = "1.0.8"

[profile.release]
debug = true
lto = true
panic = "abort"
