[package]
name = "surge"
version = "0.1.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "cli/daemon for music"
repository = "https://github.com/sevagh/surge"
readme = "./README.md"
license = "Apache-2.0"
keywords = ["music", "cli"]

[dependencies]
hyper = "0.10.11"
hyper-native-tls = "0.2.3"
toml = "0.4.1"
serde_derive = "1.0.8"
serde = "1.0.8"
serde_json = "1.0.2"
rustyline = "1.0.0"
rodio = "0.5.0"
regex = "0.2.2"
lazy_static = "0.2.8"
termimage = "0.3.1"
tempdir = "0.3"
terminal_size = "0.1.6"
image = "0.10.0"

[profile.release]
debug = true
lto = true
panic = "abort"
