[package]
name = "surge"
version = "0.1.1"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "cli/daemon for music"
repository = "https://github.com/sevagh/surge"
readme = "./README.md"
license = "Apache-2.0"
keywords = ["music", "cli"]

[dependencies]
hyper = "0.10.11"
hyper-native-tls = "0.2.3"
serde_json = "1.0.2"
rustyline = "1.0.0"
regex = "0.2.2"
lazy_static = "0.2.8"
termimage = "0.3.1"
term_size = "0.2.3"
image = "0.10.0"
mpv = "0.2.3"
app_setup = { path = "app_setup", version = "0.1.0" }
app_dirs = "1.1.1"
rust-ini = "0.10.0"

[workspace]
members = ["app_setup"]

[profile.release]
debug = true
lto = true
panic = "abort"
